objects/SCQuickSetup__sos_quick_setup__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>SCQuickSetup__bookmark__c</fullName>
        <label>bookmark</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCQuickSetup__case__c</fullName>
        <label>case</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCQuickSetup__chat__c</fullName>
        <label>chat</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCQuickSetup__knowledge__c</fullName>
        <label>knowledge</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCQuickSetup__selected_tab__c</fullName>
        <label>selected_tab</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCQuickSetup__sfdc_email__c</fullName>
        <label>sfdc_email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCQuickSetup__sos__c</fullName>
        <label>sos</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>sos_quick_setup</label>
</CustomObject>